updating ignore and readme file, and Day 49

--- a/05_Books/Geron_ML/Chapter7_Ensemble_and_RF.ipynb
+++ b/05_Books/Geron_ML/Chapter7_Ensemble_and_RF.ipynb
@@ -5,7 +5,7 @@
    "id": "occasional-insulin",
    "metadata": {},
    "source": [
-    "**Solution for Chapter 7 – Linear Models**\n",
+    "**Solution for Chapter 7 – Ensemble and RF**\n",
     "#### I will be following the chapter activities!"
    ]
   },
