--- a/05_Books/Sowmya_NLP/Chapter4_Classification.ipynb
+++ b/05_Books/Sowmya_NLP/Chapter4_Classification.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "greater-october",
+   "id": "independent-switch",
    "metadata": {},
    "source": [
     "**Chapter 4 – Text Classification**\n",
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "sized-central",
+   "id": "quantitative-halloween",
    "metadata": {},
    "source": [
     "## Spam Classification"
@@ -19,10 +19,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "unique-evans",
+   "execution_count": 1,
+   "id": "small-positive",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "--2021-03-08 10:07:07--  https://archive.ics.uci.edu/ml/machine-learning-databases/00228/smsspamcollection.zip\n",
+      "Resolving archive.ics.uci.edu (archive.ics.uci.edu)... 128.195.10.252\n",
+      "Connecting to archive.ics.uci.edu (archive.ics.uci.edu)|128.195.10.252|:443... connected.\n",
+      "HTTP request sent, awaiting response... 200 OK\n",
+      "Length: 203415 (199K) [application/x-httpd-php]\n",
+      "Saving to: ‘smsspamcollection.zip’\n",
+      "\n",
+      "smsspamcollection.z 100%[===================>] 198.65K   636KB/s    in 0.3s    \n",
+      "\n",
+      "2021-03-08 10:07:08 (636 KB/s) - ‘smsspamcollection.zip’ saved [203415/203415]\n",
+      "\n",
+      "Archive:  smsspamcollection.zip\n",
+      "  inflating: SMSSpamCollection       \n",
+      "  inflating: readme                  \n"
+     ]
+    }
+   ],
    "source": [
     "!wget https://archive.ics.uci.edu/ml/machine-learning-databases/00228/smsspamcollection.zip\n",
     "!unzip smsspamcollection.zip"
@@ -30,8 +51,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "finite-brisbane",
+   "execution_count": 2,
+   "id": "passing-works",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -40,8 +61,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "rising-invitation",
+   "execution_count": 3,
+   "id": "infinite-obligation",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -50,14 +71,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "african-mystery",
+   "execution_count": 5,
+   "id": "dated-spyware",
    "metadata": {},
    "outputs": [],
    "source": [
-    "import fastai\n",
-    "from fastai import *\n",
-    "from fastai.text import * \n",
+    "#import fastai\n",
+    "#from fastai import *\n",
+    "#from fastai.text import * \n",
     "import pandas as pd\n",
     "import numpy as np\n",
     "from functools import partial\n",
@@ -67,20 +88,111 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "formed-stupid",
+   "execution_count": 6,
+   "id": "continuous-engine",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>target</th>\n",
+       "      <th>text</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>ham</td>\n",
+       "      <td>Go until jurong point, crazy.. Available only ...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>ham</td>\n",
+       "      <td>Ok lar... Joking wif u oni...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>spam</td>\n",
+       "      <td>Free entry in 2 a wkly comp to win FA Cup fina...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>ham</td>\n",
+       "      <td>U dun say so early hor... U c already then say...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>ham</td>\n",
+       "      <td>Nah I don't think he goes to usf, he lives aro...</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "  target                                               text\n",
+       "0    ham  Go until jurong point, crazy.. Available only ...\n",
+       "1    ham                      Ok lar... Joking wif u oni...\n",
+       "2   spam  Free entry in 2 a wkly comp to win FA Cup fina...\n",
+       "3    ham  U dun say so early hor... U c already then say...\n",
+       "4    ham  Nah I don't think he goes to usf, he lives aro..."
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "df.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "entire-watershed",
+   "execution_count": 7,
+   "id": "standing-version",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(5572, 2)"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "ham     0.865937\n",
+       "spam    0.134063\n",
+       "Name: target, dtype: float64"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "display(df.shape) #Number of rows (instances) and columns in the dataset\n",
     "df[\"target\"].value_counts()/df.shape[0] #Class distribution in the dataset"
@@ -88,8 +200,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "immune-pricing",
+   "execution_count": 8,
+   "id": "eleven-mailman",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -101,20 +213,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "desperate-joint",
+   "execution_count": 9,
+   "id": "exact-malaysia",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "((4457, 2), (1115, 2))"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "df_train.shape,df_test.shape"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "brazilian-attempt",
+   "execution_count": 10,
+   "id": "adjacent-canvas",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'TextLMDataBunch' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-10-0f1488e8e5a7>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;31m# Language model data\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0mdata_lm\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mTextLMDataBunch\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mfrom_df\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtrain_df\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mdf_train\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mvalid_df\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mdf_test\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mpath\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m\"\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      3\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0;31m# Classifier model data\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0mdata_class\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mTextClasDataBunch\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mfrom_df\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mpath\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m\"\"\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mtrain_df\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mdf_train\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mvalid_df\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mdf_test\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mvocab\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mdata_lm\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mtrain_ds\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mvocab\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mbs\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m32\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'TextLMDataBunch' is not defined"
+     ]
+    }
+   ],
    "source": [
     "# Language model data\n",
     "data_lm = TextLMDataBunch.from_df(train_df = df_train, valid_df = df_test, path = \"\")\n",
@@ -126,7 +261,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "forward-papua",
+   "id": "skilled-struggle",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -136,7 +271,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "daily-jenny",
+   "id": "illegal-panama",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -146,7 +281,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "amazing-signal",
+   "id": "preceding-event",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -157,7 +292,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "criminal-sustainability",
+   "id": "canadian-sympathy",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -168,7 +303,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "global-director",
+   "id": "plastic-country",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -179,7 +314,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "capital-george",
+   "id": "chief-occasions",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -190,7 +325,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "seasonal-walter",
+   "id": "august-jenny",
    "metadata": {},
    "outputs": [],
    "source": []
